[package]
name = "qtranslation"
version = "0.1.4"
edition = "2021"
description = "A minimalist translation system based on json for qmetaobject"
license ="AGPL-3.0-only"
repository ="https://github.com/cyrgarden/qtranslation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qmetaobject = "0.2.7"
sys-locale = "0.2.1"
serde_json = "1.0.85"
